--- a/Script.conf
+++ b/Script.conf
@@ -126,6 +126,8 @@ https:\/\/.*\.*apps.com url request-header Cookie:.+ request-header Cookie: xxx_
 
 # Keep 解锁私人课程和动作库 (QX存在bug 该脚本可能无法生效)
 # ^https:\/\/api\.gotokeep\.com\/(.+\/subject|.+\/dynamic) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/Surge/JS/Keep.js
+# keep去开屏广告
+https:\/\/api\.gotokeep\.com\/ads\/v1\/ads\?spotIds url reject
 
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
