--- a/Quan-X_Search.conf
+++ b/Quan-X_Search.conf
@@ -1,7 +1,5 @@
-# Q-Search 
+# Quan-X_Search 
 # Modified by nzw9314 
-# From Neurogram (https://raw.githubusercontent.com/Neurogram-R/Surge/master/module/Q-Search.sgmodule)
-
 # - Safari 内输入 命令 + 空格 + 关键词 快速指定搜索引擎搜索
 
 #  注：先进入设置更改 Safari 默认搜索为 DuckDuckGO
