--- a/Script.conf
+++ b/Script.conf
@@ -98,7 +98,7 @@ https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.gith
 ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
 
 # 大片-视频编辑器 VIP
-^https?:\/\/vni\.kwaiying\.com\/v1\/(user\/|banners) url script-response-body https://github.com/Alodaner/Quantumult-X/blob/master/JavaScript/Bigshot.js
+^https?:\/\/vni\.kwaiying\.com\/v1\/(user\/|banner) url script-response-body https://github.com/Alodaner/Quantumult-X/blob/master/JavaScript/Bigshot.js
 
 # 91短视频
 ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/91.js
