--- a/AdBlock.conf
+++ b/AdBlock.conf
@@ -5,7 +5,7 @@
 // @Attention         如果广告仍然存在，请卸载应用重新安装                       
 
 #乐橙启动广告
-https://*.mob.com url reject
+https://dl-cu-hz.lechange.cn/oms-online/advertisementPush/* url reject
 
 # 京东极速版开屏广告
 https://api.m.jd.com/client.action\?functionId=lite_advertising url reject
@@ -16,4 +16,4 @@ https://ad.12306.cn/* url reject
 # 去哪儿开屏广告
 https://homefront.qunar.com/front/splash/ad url reject
 
-hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com, mob.com
+hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com,mob.com
