--- a/AdBlock.conf
+++ b/AdBlock.conf
@@ -16,4 +16,4 @@ https://ad.12306.cn/* url reject
 # 去哪儿开屏广告
 https://homefront.qunar.com/front/splash/ad url reject
 
-hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com,mob.com
+hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com,dl-cu-hz.lechange.cn
