--- a/AdBlock.conf
+++ b/AdBlock.conf
@@ -6,6 +6,7 @@
 
 #乐橙启动广告
 https://dl-cu-hz.lechange.cn/oms-online/advertisementPush/* url reject
+http://*.mob.com/* url reject
 
 # 京东极速版开屏广告
 https://api.m.jd.com/client.action\?functionId=lite_advertising url reject
@@ -16,4 +17,4 @@ https://ad.12306.cn/* url reject
 # 去哪儿开屏广告
 https://homefront.qunar.com/front/splash/ad url reject
 
-hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com,dl-cu-hz.lechange.cn
+hostname=homefront.qunar.com, ad.12306.cn,api.m.jd.com,dl-cu-hz.lechange.cn,mob.com
