--- a/AdBlock.conf
+++ b/AdBlock.conf
@@ -6,7 +6,7 @@
 
 #乐橙启动广告
 https://dl-cu-hz.lechange.cn/oms-online/advertisementPush/* url reject
-http://*.mob.com/* url reject
+http://api.*.mob.com/* url reject
 
 # 京东极速版开屏广告
 https://api.m.jd.com/client.action\?functionId=lite_advertising url reject
