--- a/Script.conf
+++ b/Script.conf
@@ -60,7 +60,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 # https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/Surge/JS/Termius.js
 
 # keep去开屏广告
-https:\/\/api\.gotokeep\.com\/ads\/v1\/ads\?spotIds url reject
+https:\/\/api\.gotokeep\.com\/ads\/v1\/* url reject
 
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/CamScanner.js
