--- a/Script.conf
+++ b/Script.conf
@@ -47,9 +47,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 # VSCO滤镜VIP
 ^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/\d+$ url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/VSCO.js
 
-# 大片-视频编辑器 VIP
-^https?:\/\/vni\.kwaiying\.com\/v1\/(user\/|banner) url script-response-body https://github.com/Alodaner/Quantumult-X/blob/master/JavaScript/Bigshot.js
-
 # 腾讯新闻 去广告 (By Choler)
 #^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/QQNews.js
 
@@ -99,7 +96,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
 
-# 西窗烛 （By 黑黑酱）
+# 西窗烛 
 https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/XC-Culture.js
 
 # 油猴转换器 (by Peng-YM)
