--- a/Script.conf
+++ b/Script.conf
@@ -8,6 +8,7 @@ hostname = notability.com，*.mb3admin.com, *.emby.wtf, *.plusmedia.site, *.jmso
 # 多账号Cookie保存切换
 # 访问:  http://boxjs.com 管理
 ^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
+^https?://boxjs.net url script-analyze-echo-response https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js
 ^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
 
