--- a/Script.conf
+++ b/Script.conf
@@ -81,5 +81,8 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 #丁香医生VIP
 ^https:\//dxy.com\/app\/i\/user\/ask\/account\?ac url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/dxys.js
 
+# VLLO解锁订阅
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/VimoSoftVLLOProCrack.js
+
 # 油猴转换器 (by Peng-YM)
 https:\/\/greasyfork\.org\/scripts\/.*\.user\.js url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/GreasyFork/greasy-fork.js
