--- a/Script.conf
+++ b/Script.conf
@@ -59,17 +59,17 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 # > AudioMack解锁永久订阅
 ^https?:\/\/api\.revenuecat\.com\/v1\/subscribers\/(identify|\d+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/AudioMackProCrack.js
 
-# WPS Office
+# > WPS Office
 ^https?:\/\/account\.wps\.cn\/api\/users url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
 
 # > 烘焙小屋(2022.01.19)
 ^https?:\/\/apiios_dq\.xiangha\.com\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/HongBeiXiaoWu.js
 ^https?:\/\/appweb_dq\.xiangha\.com\/center\/pay\/home url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/HongBeiXiaoWu.js
 
-# 解锁酷我音乐会员➕听书
+# > 解锁酷我音乐会员➕听书
 ^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
 
-# keep解锁会员
+# > keep解锁会员
 ^https://(.+).gotokeep.com(/athena/v5/people/my|/nuocha/plans) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/keep
 
 # > 克拉壁纸解锁订阅
@@ -78,16 +78,16 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 # > 图图记账解锁永久高级版
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/ToToWalletFProCrack.js
 
-#丁香医生VIP
+# > 丁香医生VIP
 ^https:\//dxy.com\/app\/i\/user\/ask\/account\?ac url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/dxys.js
 
-#Varlens解锁PRO
+# > Varlens解锁PRO
 ^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/vspro.js
 
 # > Pause(2022.01.21)
 ^https?:\/\/api1\.pauseable\.com\/v\d\/projects\/pauseable url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/Pause.js
 
-#Drops
+# > Drops
 ^https\:\/\/api-prod\.languagedrops\.com\/syncPurchasesV\d url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/drops.js
 
 # > WallCraft解锁专业版
@@ -97,7 +97,7 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 # ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://gjds.vip/QX/pojie/bigshot.js
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
 
-#蜗牛睡眠 全功能解锁VIP&付费音乐
+# > 蜗牛睡眠 全功能解锁VIP&付费音乐
 ^https:\/\/(snailsleep\.net\/|(music|community)\.snailsleep\.net\/)(snail\/v1\/profile\/get|snail-music\/music\/(sleeping|meditation)\/single\/list) url script-response-body https://raw.githubusercontent.com/photonmang/quantumultX/master/wnsm.js
 
 # 油猴转换器 (by Peng-YM)
