--- a/Script.conf
+++ b/Script.conf
@@ -108,7 +108,7 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 # > Spotify
 ^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
 
-# > FileBox解锁永久高级版
+# > FB解锁永久高级版
 # ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FileBoxFProCrack.js
 
 # > 91视频解锁会员
