--- a/Script.conf
+++ b/Script.conf
@@ -86,7 +86,7 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 ^https:\//dxy.com\/app\/i\/user\/ask\/account\?ac url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/dxys.js
 
 # > Varlens解锁PRO
-^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/vspro.js
+^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/Varlens.js
 
 # > Pause(2022.01.21)
 ^https?:\/\/api1\.pauseable\.com\/v\d\/projects\/pauseable url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/Pause.js
