--- a/Script.conf
+++ b/Script.conf
@@ -14,45 +14,44 @@ hostname = bookapi.ellabook.cn    , spclient.wg.spotify.com ,snailsleep.net,musi
 ^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
 
-#### [ NobyDa ]
-
-# 去微博应用内广告 (By yichahucha)
+# > 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
-# 去微信公众号广告 (By Choler)
+# >去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-## EMBY
-# 播放解锁
+### EMBY
+# > 播放解锁
 ^https?:\/\/mb3admin.com\/admin\/service\/registration\/validateDevice url script-response-body https://raw.githubusercontent.com/rartv/EmbyPublic/test/quantumult-x/unlock.js
-# 解决QX抓取某些公益服该请求乱码问题
+# > 解决QX抓取某些公益服该请求乱码问题
 \/Users\/\w{32}\/Items\/\d+\? url request-header (\r\n)Accept-Encoding:.+ request-header $Accept-Encoding: gzip, deflate, br
-# 添加外部播放器连接
+# > 添加外部播放器连接
 \/Users\/\w{32}\/Items\/\d+\? url script-response-body https://raw.githubusercontent.com/rartv/EmbyPublic/test/surge/emby-plugin.js
-# 打开外部播放器
+# > 打开外部播放器
 \/plugin\/scheme url script-echo-response https://raw.githubusercontent.com/rartv/EmbyPublic/test/surge/emby-plugin.js
-# 资源路径伪静态
+# > 资源路径伪静态
 (\/Videos\/\d+\/stream\/.+\?.+&filename)|(\/Videos\/\d+\/\w{32}\/Subtitles\/\d+\/.+\?.+&filename) url script-request-header https://raw.githubusercontent.com/rartv/EmbyPublic/test/surge/emby-plugin.js
-# 下载文件重命名
+# > 下载文件重命名
 (\/Videos\/\d+\/stream\/.+\?.+&filename)|(\/Videos\/\d+\/\w{32}\/Subtitles\/\d+\/.+\?.+&filename) url script-response-header https://raw.githubusercontent.com/rartv/EmbyPublic/test/quantumult-x/download-file-rename.js
 
-# 扫描全能王 pro
+# > 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/CamScanner.js
 
-#百度云倍速播放
+# > 百度云
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
 
-# 西窗烛 
+# > 西窗烛 
 https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/Alodaner/Quantumult-X/master/JavaScript/XC-Culture.js
 
-# WPS (By eHpo)
+# > WPS (By eHpo)
 ^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
 
-#流利说.阅读 (by@火羽&@singee)
-^https?:\/\/vira\.llsapp\.com\/api\/v2\/readings\/(accessible|limitation) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/llyd.js
+# > 流利说.阅读
+# ^https?:\/\/vira\.llsapp\.com\/api\/v2\/readings\/(accessible|limitation) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/llyd.js
+  ^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
 
-# Notability
+# > Notability
 https://notability.com/subscriptions url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/notability.js
 
 # > FIMO解锁全部胶卷
@@ -115,8 +114,8 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 ^https?:\/\/ap\w{1}\.(weilaixushi|orientlion|qdjdswkj|0954auto)\.com\/m_user\/info url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/91SPCrack.js
 ^https?:\/\/.*\/common\/splash_config url reject-200
 
-# ～ 起伏解鎖會員權限（2022-02-19）@ddgksf2013
+# > 起伏解鎖會員權限（2022-02-19）@ddgksf2013
 https?:\/\/api\.risingfalling\.com\/api\/vip\/detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qifu.js
 
-# 油猴转换器 (by Peng-YM)
+# > 油猴转换器 (by Peng-YM)
 https:\/\/greasyfork\.org\/scripts\/.*\.user\.js url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/GreasyFork/greasy-fork.js
