--- a/Script.conf
+++ b/Script.conf
@@ -4,6 +4,7 @@ hostname = bookapi.ellabook.cn    , spclient.wg.spotify.com ,snailsleep.net,musi
 
           , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com
           , api.risingfalling.com
+          , api.revenuecat.com
 #### api.revenuecat.com
 #### [ Chavy box ] 
 
@@ -110,9 +111,9 @@ https://notability.com/subscriptions url script-response-body https://raw.github
 # > FB解锁永久高级版
 # ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FileBoxFProCrack.js
 
-# > 91视频解锁会员
-^https?:\/\/ap\w{1}\.(weilaixushi|orientlion|qdjdswkj|0954auto)\.com\/m_user\/info url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/91SPCrack.js
-^https?:\/\/.*\/common\/splash_config url reject-200
+# > 解锁Grow会员(2022.01.29)
+^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Grow.js
+^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/Grow.js
 
 # > 起伏解鎖會員權限（2022-02-19）@ddgksf2013
 https?:\/\/api\.risingfalling\.com\/api\/vip\/detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qifu.js
