--- a/CrackPro.conf
+++ b/CrackPro.conf
@@ -3,55 +3,55 @@
 
             hostname = 
 
-                        # > CamScanner < #
+                        / * # > CamScanner < # * /
                         ap*.intsig.net              ,
             
-                        # > 百度网盘部分 < #
+                        / * # > 百度网盘部分 < # * /
                         pan.baidu.com               ,
             
-                        # > 西  窗  烛 < #
+                        / * # > 西  窗  烛 < # * /
                         avoscloud.com               ,
             
-                        # > WPS  部分 < #
+                        / * # > WPS  部分 < # * /
                         account.wps.cn              ,
             
-                        # > 流利说阅读 < #
+                        / * # > 流利说阅读 < # * /
                         vira.llsapp.com             ,
             
-                        # > Notabili < #
+                        / * # > Notabili < # * /
                         notability.com              ,
             
-                        # > FIMO相机 < #
+                        / * # > FIMO相机 < # * /
                         server.yoyiapp.com          ,
             
-                        # > Keep部分 < #
+                        / * # > Keep部分 < # * /
                         *.gotokeep.com              ,
             
-                        # > 通用解锁 < #
+                        / * # > 通用解锁 < # * /
                         buy.itunes.apple.com        ,
             
-                        # > 内购接口 < #
+                        / * # > 内购接口 < # * /
                         api.revenuecat.com          ,
             
-                        # > 丁香医生 < #
+                        / * # > 丁香医生 < # * /
                         dxy.com                     ,
             
-                        # > Varlens < #
+                        / * # > Varlens < # * /
                         mid.zineapi.com             ,
             
-                        # >  Drops  < #
+                        / * # >  Drops  < # * /
                         api-prod.languagedrops.com  ,
             
-                        # > WallCraft < #
+                        / * # > WallCraft < #  * /
                         *.wallpaperscraft.com       ,
             
-                        # > BigShort < #
+                        / * # > BigShort < # * /
                         vni.kwaiying.com            ,
             
-                        # > Spotify < #
+                        / * # > Spotify < # * /
                         spclient.wg.spotify.com     ,
                         
-                        # >  TIDAL < #
+                        / * # >  TIDAL < # * /
                         api.tidal.com
             
 
