--- a/CrackPro.conf
+++ b/CrackPro.conf
@@ -1,10 +1,5 @@
-            ########## > hostname < ##########
-            
-            
-
-            hostname = 
-
-                        ap*.intsig.net              ,
+           
+            hostname =  ap*.intsig.net              ,
             
                         pan.baidu.com               ,
             
@@ -39,7 +34,6 @@
                         api.tidal.com
             
 
-            ########## > rewrite < ##########
 
 
             # > 访问:  http://boxjs.com 管理
