--- a/Get-cookie.conf
+++ b/Get-cookie.conf
@@ -48,21 +48,16 @@ hostname =  nebula.kuaishou.com, activity.m.kuaishou.com,hweb-mbf.huazhu.com,zhi
 
 
 # 携程旅行 (By @barrymchen)
-https:\/\/m\.ctrip\.com\/restapi\/soa2\/14946\/json\/userBaseInfo url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip_cookie.js
 
-# 京东成长分 (By @barrymchen)
-^https:\/\/ms\.jr\.jd\.com\/gw\/generic\/bt\/h5\/m\/queryUserSignFlow url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/jdczfcookie.js
 
-# 工银e生活 (By @barrymchen)
-^https:\/\/icbc1\.wlphp\.com:8444\/js\/api\/index\/signIn url script-request-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/icbc_cookie.js
 
 # 微信小程序-同程艺龙 (By @barrymchen)
-^https:\/\/wx\.17u\.cn\/wcsign\/sign\/GetSignInfo url script-request-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/tongc_cookie.js
+#^https:\/\/wx\.17u\.cn\/wcsign\/sign\/GetSignInfo url script-request-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/tongc_cookie.js
 
 
 # 招行信用卡公众号 (By @iNotification)
-https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/cmbchina.js
+#https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/cmbchina.js
 
 # 微信小程序 活动抽奖 (By @makexp & @zZPiglet)
-^https:\/\/api-hdcj\.9w9\.com\/v\d\/sign url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/WeChatLottery_new.js
+#^https:\/\/api-hdcj\.9w9\.com\/v\d\/sign url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/WeChatLottery_new.js
 
