--- a/gruop.conf
+++ b/gruop.conf
@@ -78,22 +78,23 @@ udp-relay = true
 🇨🇳 台湾标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11042,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
 🇨🇳 台湾标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11043,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
 
-🇭🇰WTT = ss, wtt.b.a, 44443, chacha20, sumsethan@wtt
-🇭🇰SSL-WTT = https, wtt.b.a, 34443, sumsethan, sumsethan@wtt
-🇭🇰HKT = ss, hkt.b.a, 54443, chacha20, sumsethan@hkt
-🇭🇰SSL-HKT = https, hkt.b.a, 34443, sumsethan, sumsethan@hkt
-🇨🇳电信 = ss, ct.b.a, 54443, chacha20, sumsethan@ct
-🇨🇳联通 = ss, cu.b.a, 54443, chacha20, sumsethan@cu
-🇨🇳移动 = ss, cm.b.a, 54443, chacha20, sumsethan@cm
-Home = ss, frp.b.a, 44443, chacha20, sumsethan@frp
+#🇭🇰WTT = ss, wtt.b.a, 44443, chacha20, sumsethan@wtt
+#🇭🇰SSL-WTT = https, wtt.b.a, 34443, sumsethan, sumsethan@wtt
+#🇭🇰HKT = ss, hkt.b.a, 54443, chacha20, sumsethan@hkt
+#🇭🇰SSL-HKT = https, hkt.b.a, 34443, sumsethan, sumsethan@hkt
+#🇨🇳电信 = ss, ct.b.a, 54443, chacha20, sumsethan@ct
+#🇨🇳联通 = ss, cu.b.a, 54443, chacha20, sumsethan@cu
+#🇨🇳移动 = ss, cm.b.a, 54443, chacha20, sumsethan@cm
+#Home = ss, frp.b.a, 44443, chacha20, sumsethan@frp
 On = reject
 Off = direct
 DIRECT = direct
 [Proxy Group]
 Proxy = select, Shadowsocks, HTTPoverTLS
-CN = select, DIRECT, 🇨🇳电信, 🇨🇳联通, 🇨🇳移动
+#CN = select, DIRECT, 🇨🇳电信, 🇨🇳联通, 🇨🇳移动
 ADblock = select, On, Off
 Shadowsocks = select, 🇭🇰 香港实验性 IEPL 中继 1, 🇭🇰 香港高级 IEPL 中继 1,  🇭🇰 香港高级 IEPL 中继 2,  🇭🇰 香港高级 IEPL 中继 3,  🇭🇰 香港高级 IEPL 中继 4,  🇭🇰 香港高级 IEPL 中继 5,  🇭🇰 香港高级 IEPL 中继 6,  🇭🇰 香港高级 IEPL 中继 7,  🇭🇰 香港高级 IEPL 中继 8,
+🇯🇵 日本实验性 IEPL 中继 1,🇯🇵 日本高级 IEPL 中继 1,🇯🇵 日本高级 IEPL 中继 2,🇯🇵 日本高级 IEPL 中继 3,🇯🇵 日本标准 IEPL 中继 1,🇯🇵 日本标准 IEPL 中继 2,🇯🇵 日本标准 IEPL 中继 3,🇯🇵 日本标准 IEPL 中继 4,🇯🇵 日本标准 IEPL 中继 5,🇯🇵 日本标准 IEPL 中继 6,🇯🇵 日本标准 IEPL 中继 7,🇯🇵 日本标准 IEPL 中继 8,🇸🇬 新加坡实验性 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 2,🇸🇬 新加坡高级 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 1,🇸🇬 新加坡标准 IEPL 中继 2,🇸🇬 新加坡标准 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 4,🇸🇬 新加坡标准 IEPL 中继 5,🇸🇬 新加坡标准 IEPL 中继 6,🇸🇬 新加坡标准 IEPL 中继 7,🇸🇬 新加坡标准 IEPL 中继 8,🇨🇳 台湾高级 IEPL 中继 1,🇨🇳 台湾高级 IEPL 中继 2,🇨🇳 台湾高级 IEPL 中继 3,🇨🇳 台湾标准 IEPL 中继 1,🇨🇳 台湾标准 IEPL 中继 2,🇨🇳 台湾标准 IEPL 中继 3,🇺🇸 美国实验性 IEPL 中继 1,🇺🇸 美国高级 IEPL 中继 1,🇺🇸 美国高级 IEPL 中继 2,🇺🇸 美国高级 IEPL 中继 3,🇺🇸 美国标准 IEPL 中继 1,🇺🇸 美国标准 IEPL 中继 2,🇺🇸 美国标准 IEPL 中继 3,🇺🇸 美国标准 IEPL 中继 4,🇺🇸 美国标准 IEPL 中继 5,🇺🇸 美国标准 IEPL 中继 6,🇺🇸 美国标准 IEPL 中继 7,🇺🇸 美国标准 IEPL 中继 8,🇸🇬 新加坡实验性 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 2,🇸🇬 新加坡高级 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 1,🇸🇬 新加坡标准 IEPL 中继 2,🇸🇬 新加坡标准 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 4,🇸🇬 新加坡标准 IEPL 中继 5,🇸🇬 新加坡标准 IEPL 中继 6,🇸🇬 新加坡标准 IEPL 中继 7,🇸🇬 新加坡标准 IEPL 中继 8,🇨🇳 台湾高级 IEPL 中继 1,🇨🇳 台湾高级 IEPL 中继 2,🇨🇳 台湾高级 IEPL 中继 3,🇨🇳 台湾标准 IEPL 中继 1,🇨🇳 台湾标准 IEPL 中继 2,🇨🇳 台湾标准 IEPL 中继 3
 [Rule]
 # AD Block KEYWORD
 DOMAIN-KEYWORD,admarvel,ADblock
