--- a/gruop.conf
+++ b/gruop.conf
@@ -90,6 +90,7 @@ On = reject
 Off = direct
 DIRECT = direct
 [Proxy Group]
+CN = direct
 Proxy = select, Shadowsocks
 ADblock = select, On, Off
 Shadowsocks = select, 🇭🇰 香港实验性 IEPL 中继 1, 🇭🇰 香港高级 IEPL 中继 1,  🇭🇰 香港高级 IEPL 中继 2,  🇭🇰 香港高级 IEPL 中继 3,  🇭🇰 香港高级 IEPL 中继 4,  🇭🇰 香港高级 IEPL 中继 5,  🇭🇰 香港高级 IEPL 中继 6,  🇭🇰 香港高级 IEPL 中继 7,  🇭🇰 香港高级 IEPL 中继 8,🇯🇵 日本实验性 IEPL 中继 1,🇯🇵 日本高级 IEPL 中继 1,🇯🇵 日本高级 IEPL 中继 2,🇯🇵 日本高级 IEPL 中继 3,🇯🇵 日本标准 IEPL 中继 1,🇯🇵 日本标准 IEPL 中继 2,🇯🇵 日本标准 IEPL 中继 3,🇯🇵 日本标准 IEPL 中继 4,🇯🇵 日本标准 IEPL 中继 5,🇯🇵 日本标准 IEPL 中继 6,🇯🇵 日本标准 IEPL 中继 7,🇯🇵 日本标准 IEPL 中继 8,🇸🇬 新加坡实验性 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 2,🇸🇬 新加坡高级 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 1,🇸🇬 新加坡标准 IEPL 中继 2,🇸🇬 新加坡标准 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 4,🇸🇬 新加坡标准 IEPL 中继 5,🇸🇬 新加坡标准 IEPL 中继 6,🇸🇬 新加坡标准 IEPL 中继 7,🇸🇬 新加坡标准 IEPL 中继 8,🇨🇳 台湾高级 IEPL 中继 1,🇨🇳 台湾高级 IEPL 中继 2,🇨🇳 台湾高级 IEPL 中继 3,🇨🇳 台湾标准 IEPL 中继 1,🇨🇳 台湾标准 IEPL 中继 2,🇨🇳 台湾标准 IEPL 中继 3,🇺🇸 美国实验性 IEPL 中继 1,🇺🇸 美国高级 IEPL 中继 1,🇺🇸 美国高级 IEPL 中继 2,🇺🇸 美国高级 IEPL 中继 3,🇺🇸 美国标准 IEPL 中继 1,🇺🇸 美国标准 IEPL 中继 2,🇺🇸 美国标准 IEPL 中继 3,🇺🇸 美国标准 IEPL 中继 4,🇺🇸 美国标准 IEPL 中继 5,🇺🇸 美国标准 IEPL 中继 6,🇺🇸 美国标准 IEPL 中继 7,🇺🇸 美国标准 IEPL 中继 8,🇸🇬 新加坡实验性 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 1,🇸🇬 新加坡高级 IEPL 中继 2,🇸🇬 新加坡高级 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 1,🇸🇬 新加坡标准 IEPL 中继 2,🇸🇬 新加坡标准 IEPL 中继 3,🇸🇬 新加坡标准 IEPL 中继 4,🇸🇬 新加坡标准 IEPL 中继 5,🇸🇬 新加坡标准 IEPL 中继 6,🇸🇬 新加坡标准 IEPL 中继 7,🇸🇬 新加坡标准 IEPL 中继 8,🇨🇳 台湾高级 IEPL 中继 1,🇨🇳 台湾高级 IEPL 中继 2,🇨🇳 台湾高级 IEPL 中继 3,🇨🇳 台湾标准 IEPL 中继 1,🇨🇳 台湾标准 IEPL 中继 2,🇨🇳 台湾标准 IEPL 中继 3
